--- a/MQuince/MQuince.WebAPI/clientapp/public/Communication/AddFeedback.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Communication/AddFeedback.html
@@ -28,7 +28,7 @@
 </head>
 <body id="addFeedback">
     <!-- Navigation-->
-    <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
+    <div id="mainNav" class="d-none d-lg-flex align-items-center fixed-top">
         <div class="container d-flex">
             <div class="contact-info mr-auto">
                 <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">contact@mquince.com</a>
@@ -130,9 +130,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <!-- Contact form JS-->
-    <script src="assets/mail/jqBootstrapValidation.js"></script>
-    <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
     <script src="scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.18/vue.min.js"></script>
