--- a/MQuince/MQuince.WebAPI/clientapp/public/Communication/Feedbacks.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Communication/Feedbacks.html
@@ -176,9 +176,11 @@
                                 </td>
                                 <td>
                                     <div style="margin-left:30px;margin-bottom:30px">
-                                        <div class="short-info2">By Helena:</div>
-                                        <div class="apartment-name2">{{feedback.entityDTO.comment}}</div>
-                                    </div>
+										<div v-for="feedback in feedbacks">
+											<div class="short-info2">By Helena:</div>
+											<div class="apartment-name2">{{feedback.entityDTO.comment}}</div>
+										</div>
+									</div>
                                 </td>
                             </tr>
                         </table>
