--- a/MQuince/MQuince.WebAPI/clientapp/public/Login/LoginUser.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Login/LoginUser.html
@@ -24,12 +24,13 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="styles.css" rel="stylesheet" />
     <link href="../../src/assets/style.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="../Login/login.css">
 
 </head>
 <body>
     <!-- Navigation-->
 	
-    <div id="mainNav" class="d-none d-lg-flex align-items-center fixed-top">
+    <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
         <div class="container d-flex">
             <div class="contact-info mr-auto">
                 <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">contact@mquince.com</a>
