--- a/MQuince/MQuince.WebAPI/clientapp/public/Communication/AddFeedback.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Communication/AddFeedback.html
@@ -28,7 +28,7 @@
 </head>
 <body id="addFeedback">
     <!-- Navigation-->
-    <div id="mainNav" class="d-none d-lg-flex align-items-center fixed-top">
+    <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
         <div class="container d-flex">
             <div class="contact-info mr-auto">
                 <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">contact@mquince.com</a>
