--- a/MQuince/MQuince.APIGateway/clientapp/public/Appointment/Appointment.html
+++ b/MQuince/MQuince.APIGateway/clientapp/public/Appointment/Appointment.html
@@ -155,7 +155,7 @@
                                 </div>
                             </td>
                             <td style="padding-left:150px;">
-                                <button v-on:click="cancelAppointment(appointment.id)" v-if="Date.now() < new Date(appointment.entityDTO.endDateTime)" style="background: #1977cc;margin-top:100px;margin-bottom:-15px" class="btn btn-primary btn-xl" type="button">Cancel appointment</button>
+                                <button v-on:click="cancelAppointment(appointment.id)" v-if="Date.now() < new Date(appointment.entityDTO.endDateTime)" style="background: #1977cc;margin-top:100px;margin-bottom:-15px" class="btn btn-primary btn-xl" type="button" id = "cancelButton">Cancel appointment</button>
                             </td>
                         </tr>
                     </table>
