--- a/MQuince/MQuince.APIGateway/clientapp/public/index.html
+++ b/MQuince/MQuince.APIGateway/clientapp/public/index.html
@@ -53,7 +53,6 @@
         </div>
     </div>
     <div id="headerMain">
-
     </div>
     <!-- <header style="margin-top:10px" id="header" class="fixed-top">
             <div class="container d-flex align-items-center">
@@ -69,8 +68,6 @@
                             </ul>
                         </li>
                         <li v-bind:hidden="!showObserveAppointment"><a href="/public/Appointment/Appointment.html">Observe appointment</a></li>
-
-
                         <li v-bind:hidden="!showCreateAppointment" class="drop-down">
                             <a href="" class="appointment-btn scrollto" style="text-align: center; display: block; color:white">Create appointment</a>
                             <ul>
@@ -78,9 +75,8 @@
                                 <li><a href="#">Recommended appointment</a></li>
                             </ul>
                         </li>
-                        <li v-on:click="logIn" v-bind:hidden="!showLogIn"><a href="#">Log in</a></li>
+                        <li  v-bind:hidden="!showLogIn"><a href=../public/Login/LoginUser.html">Log in</a></li>
                         <li v-on:click="logOut" v-bind:hidden="!showLogOut"><a href="#">Log out</a></li>
-
                     </ul>
                 </nav>
             </div>
